# file-validator

./: README.md
01_console_count/01_console_count/: CMakeLists.txt  consolecount.cpp  consolecount.h  main.cpp
01_console_count/build-01_console_count-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  file2.txt
01_console_count/build-01_console_count-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-098f657b368376f91c8a.json  codemodel-v2-833c239a5a3aab9d97b0.json  directory-.-Debug-3ea96728bd20c4db6088.json  index-2023-10-19T07-11-44-0568.json  target-01_console_count-Debug-04e53b79c0cc93786b33.json  target-01_console_count_autogen-Debug-48ea6eb7b2c8a31789a7.json
01_console_count/build-01_console_count-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-8000ce97eec308846909.json  cmakeFiles-v1-b6dfc3c0cefc8a838058.json  codemodel-v2-cd9d6624d9c6269a9c70.json  directory-.-Debug-0b234d7b48253d1108c7.json  index-2023-10-19T06-40-51-0688.json  target-01_console_count-Debug-fe9346d0673b4cbab7e0.json  target-01_console_count_autogen_timestamp_deps-Debug-299b08c672f11927ac09.json
01_console_count/build-01_console_count-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
01_console_count/build-01_console_count-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/01_console_count_autogen/: deps
question_01_commandLine/: CMakeLists.txt  filevalidator.cpp  filevalidator.h  main.cpp
